[gd_scene load_steps=94 format=3 uid="uid://cokly4avvuwxv"]

[ext_resource type="Script" uid="uid://xev4hbm7sgd8" path="res://Scripts/player.gd" id="1_pvl2l"]
[ext_resource type="Texture2D" uid="uid://c2hieffycm3ug" path="res://Characters/Sci-fi Samurai with Sword 124x49.png" id="1_pyeja"]
[ext_resource type="PackedScene" uid="uid://w7gp50o7myrg" path="res://Escenas/point_light.tscn" id="3_fnkk1"]
[ext_resource type="AudioStream" uid="uid://bsrov2nsn28t3" path="res://sound effects/sword.mp3" id="4_e4sk6"]
[ext_resource type="AudioStream" uid="uid://3c5v2ahupqoe" path="res://sound effects/steps.mp3" id="5_lo436"]
[ext_resource type="AudioStream" uid="uid://5w324bixbn5r" path="res://sound effects/jump.mp3" id="6_xlwfv"]
[ext_resource type="AudioStream" uid="uid://bbbucroenkc2r" path="res://sound effects/death.mp3" id="7_b21vg"]
[ext_resource type="AudioStream" uid="uid://dbunxyg2rbgoe" path="res://sound effects/hit.mp3" id="8_ohiiw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lmy01"]
atlas = ExtResource("1_pyeja")
region = Rect2(1240, 294, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dihh"]
atlas = ExtResource("1_pyeja")
region = Rect2(1364, 294, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_uusuv"]
atlas = ExtResource("1_pyeja")
region = Rect2(1488, 294, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_wioc4"]
atlas = ExtResource("1_pyeja")
region = Rect2(1612, 294, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0myp"]
atlas = ExtResource("1_pyeja")
region = Rect2(1736, 294, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8lsm"]
atlas = ExtResource("1_pyeja")
region = Rect2(1860, 294, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hex1"]
atlas = ExtResource("1_pyeja")
region = Rect2(2232, 294, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rc0m"]
atlas = ExtResource("1_pyeja")
region = Rect2(2356, 294, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_gb3cj"]
atlas = ExtResource("1_pyeja")
region = Rect2(2480, 294, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_p50fm"]
atlas = ExtResource("1_pyeja")
region = Rect2(2604, 294, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukfpt"]
atlas = ExtResource("1_pyeja")
region = Rect2(2728, 294, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxvff"]
atlas = ExtResource("1_pyeja")
region = Rect2(0, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhk68"]
atlas = ExtResource("1_pyeja")
region = Rect2(124, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_jg4ue"]
atlas = ExtResource("1_pyeja")
region = Rect2(248, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyx8w"]
atlas = ExtResource("1_pyeja")
region = Rect2(372, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvm3a"]
atlas = ExtResource("1_pyeja")
region = Rect2(496, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_76qhu"]
atlas = ExtResource("1_pyeja")
region = Rect2(620, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_14x2a"]
atlas = ExtResource("1_pyeja")
region = Rect2(744, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_4j6dy"]
atlas = ExtResource("1_pyeja")
region = Rect2(868, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_03bep"]
atlas = ExtResource("1_pyeja")
region = Rect2(992, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjs5p"]
atlas = ExtResource("1_pyeja")
region = Rect2(1116, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldh2d"]
atlas = ExtResource("1_pyeja")
region = Rect2(1240, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_knqkl"]
atlas = ExtResource("1_pyeja")
region = Rect2(0, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_ul4kv"]
atlas = ExtResource("1_pyeja")
region = Rect2(124, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_oba5i"]
atlas = ExtResource("1_pyeja")
region = Rect2(248, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_y717v"]
atlas = ExtResource("1_pyeja")
region = Rect2(372, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwnoe"]
atlas = ExtResource("1_pyeja")
region = Rect2(496, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_r84g6"]
atlas = ExtResource("1_pyeja")
region = Rect2(620, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_m87nl"]
atlas = ExtResource("1_pyeja")
region = Rect2(744, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_2eo5y"]
atlas = ExtResource("1_pyeja")
region = Rect2(868, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tf0n"]
atlas = ExtResource("1_pyeja")
region = Rect2(992, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_y153w"]
atlas = ExtResource("1_pyeja")
region = Rect2(1116, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hcl0"]
atlas = ExtResource("1_pyeja")
region = Rect2(1240, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldnir"]
atlas = ExtResource("1_pyeja")
region = Rect2(1364, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5uw0"]
atlas = ExtResource("1_pyeja")
region = Rect2(1488, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_el7rh"]
atlas = ExtResource("1_pyeja")
region = Rect2(1612, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwk6x"]
atlas = ExtResource("1_pyeja")
region = Rect2(1736, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4wb5"]
atlas = ExtResource("1_pyeja")
region = Rect2(1860, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_5k7ue"]
atlas = ExtResource("1_pyeja")
region = Rect2(1984, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_7c4hf"]
atlas = ExtResource("1_pyeja")
region = Rect2(2108, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_fphui"]
atlas = ExtResource("1_pyeja")
region = Rect2(2232, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1qdr"]
atlas = ExtResource("1_pyeja")
region = Rect2(2356, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqqsu"]
atlas = ExtResource("1_pyeja")
region = Rect2(2480, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qs2r"]
atlas = ExtResource("1_pyeja")
region = Rect2(2604, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2qbc"]
atlas = ExtResource("1_pyeja")
region = Rect2(2728, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_is5xf"]
atlas = ExtResource("1_pyeja")
region = Rect2(0, 245, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_7utf4"]
atlas = ExtResource("1_pyeja")
region = Rect2(124, 245, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcg2e"]
atlas = ExtResource("1_pyeja")
region = Rect2(248, 245, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibimq"]
atlas = ExtResource("1_pyeja")
region = Rect2(372, 245, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_wt3yj"]
atlas = ExtResource("1_pyeja")
region = Rect2(496, 245, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnlje"]
atlas = ExtResource("1_pyeja")
region = Rect2(620, 245, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcj26"]
atlas = ExtResource("1_pyeja")
region = Rect2(0, 196, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_cq4qg"]
atlas = ExtResource("1_pyeja")
region = Rect2(124, 196, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgyn6"]
atlas = ExtResource("1_pyeja")
region = Rect2(248, 196, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_me1r0"]
atlas = ExtResource("1_pyeja")
region = Rect2(372, 196, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlwfv"]
atlas = ExtResource("1_pyeja")
region = Rect2(0, 392, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_7v5l4"]
atlas = ExtResource("1_pyeja")
region = Rect2(372, 245, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_b21vg"]
atlas = ExtResource("1_pyeja")
region = Rect2(496, 245, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohiiw"]
atlas = ExtResource("1_pyeja")
region = Rect2(620, 245, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2pdr"]
atlas = ExtResource("1_pyeja")
region = Rect2(0, 0, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_23m32"]
atlas = ExtResource("1_pyeja")
region = Rect2(124, 0, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_2x77u"]
atlas = ExtResource("1_pyeja")
region = Rect2(248, 0, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_grfqj"]
atlas = ExtResource("1_pyeja")
region = Rect2(372, 0, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu1k6"]
atlas = ExtResource("1_pyeja")
region = Rect2(496, 0, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtmdb"]
atlas = ExtResource("1_pyeja")
region = Rect2(620, 0, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7x4t"]
atlas = ExtResource("1_pyeja")
region = Rect2(744, 0, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_sffhl"]
atlas = ExtResource("1_pyeja")
region = Rect2(868, 0, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1mj8"]
atlas = ExtResource("1_pyeja")
region = Rect2(992, 0, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_si55g"]
atlas = ExtResource("1_pyeja")
region = Rect2(1116, 0, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_2b7wl"]
atlas = ExtResource("1_pyeja")
region = Rect2(1240, 0, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfcdk"]
atlas = ExtResource("1_pyeja")
region = Rect2(1364, 0, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_ock8k"]
atlas = ExtResource("1_pyeja")
region = Rect2(0, 98, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_nq1lw"]
atlas = ExtResource("1_pyeja")
region = Rect2(124, 98, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvivy"]
atlas = ExtResource("1_pyeja")
region = Rect2(248, 98, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uh1j"]
atlas = ExtResource("1_pyeja")
region = Rect2(372, 98, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_mye53"]
atlas = ExtResource("1_pyeja")
region = Rect2(0, 49, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_xw4gu"]
atlas = ExtResource("1_pyeja")
region = Rect2(124, 49, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8x6u"]
atlas = ExtResource("1_pyeja")
region = Rect2(248, 49, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_7prl7"]
atlas = ExtResource("1_pyeja")
region = Rect2(372, 49, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5a7t"]
atlas = ExtResource("1_pyeja")
region = Rect2(496, 49, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4xc3"]
atlas = ExtResource("1_pyeja")
region = Rect2(620, 49, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_aiofk"]
atlas = ExtResource("1_pyeja")
region = Rect2(744, 49, 124, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0o3d"]
atlas = ExtResource("1_pyeja")
region = Rect2(868, 49, 124, 49)

[sub_resource type="SpriteFrames" id="SpriteFrames_i8drl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmy01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dihh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uusuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wioc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0myp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8lsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hex1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rc0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gb3cj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p50fm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukfpt")
}],
"loop": false,
"name": &"attack",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxvff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhk68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jg4ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyx8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvm3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76qhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14x2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4j6dy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03bep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjs5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldh2d")
}],
"loop": false,
"name": &"block",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_knqkl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ul4kv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oba5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y717v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwnoe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r84g6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m87nl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2eo5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4tf0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y153w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hcl0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldnir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5uw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_el7rh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwk6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4wb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5k7ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7c4hf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fphui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1qdr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqqsu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qs2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2qbc")
}],
"loop": true,
"name": &"dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_is5xf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7utf4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcg2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibimq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wt3yj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnlje")
}],
"loop": true,
"name": &"down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcj26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cq4qg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgyn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_me1r0")
}],
"loop": true,
"name": &"fall",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlwfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7v5l4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b21vg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohiiw")
}],
"loop": false,
"name": &"hit",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2pdr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23m32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2x77u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_grfqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu1k6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtmdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7x4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sffhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1mj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_si55g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2b7wl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfcdk")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ock8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nq1lw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvivy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uh1j")
}],
"loop": true,
"name": &"jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mye53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xw4gu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8x6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7prl7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5a7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4xc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aiofk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0o3d")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pwcwb"]
size = Vector2(13, 25.1)

[node name="CharacterBody2D" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_pvl2l")

[node name="PointLight2D" parent="." instance=ExtResource("3_fnkk1")]
position = Vector2(1, 18)
rotation = -3.14159
scale = Vector2(0.75, -0.742188)
color = Color(1, 1, 1, 0.0745098)
range_z_max = 1025

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_i8drl")
animation = &"attack"
frame = 10
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.5, 12)
shape = SubResource("RectangleShape2D_pwcwb")

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_e4sk6")
volume_db = -8.915

[node name="WalkSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_lo436")
volume_db = -5.942
pitch_scale = 0.88

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_xlwfv")
volume_db = -9.583
pitch_scale = 0.7

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_b21vg")
autoplay = true

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_ohiiw")
volume_db = 1.981
autoplay = true
